# device_tree_parser

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DEVICE_TREE_INTRO.md  DEVICE_TREE_SPECIFICATION.md  LICENSE  MIGRATION.md  PERFORMANCE_IMPROVEMENTS.md  README.md  bench.sh  flake.nix
.github/workflows/: ci.yml
benches/: dtb_parsing.rs
examples/: parse_dtb.rs
src/: integration_tests.rs  lib.rs  parser.rs
src/dtb/: error.rs  header.rs  memory.rs  mod.rs  parser.rs  tokens.rs  tree.rs
test-data/: virt.dtb
