[package]
name = "device_tree_parser"
version = "0.3.0"
edition = "2024"
license = "MIT"

[lib]
name = "device_tree_parser"

[features]
std = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dtb_parsing"
harness = false

[[example]]
name = "parse_dtb"
required-features = ["std"]
